[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://scripts/SpawnerControl.gd" type="Script" id=2]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
count = 5

[node name="CounterControl" type="Control" parent="."]
margin_left = 17.0
margin_top = 29.0
margin_right = 142.0
margin_bottom = 149.0
__meta__ = {
"_edit_group_": true
}

[node name="CountLabel" type="Label" parent="CounterControl"]
margin_right = 40.0
margin_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
align = 1
valign = 1
max_lines_visible = 1

[node name="LabelBackground" type="ColorRect" parent="CounterControl/CountLabel"]
show_behind_parent = true
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.180392, 0.164706, 0.164706, 1 )

[node name="IncreaseButton" type="Button" parent="CounterControl"]
margin_top = 40.0
margin_right = 125.0
margin_bottom = 80.0
hint_tooltip = "Increase the counter!"
text = "Increase Counter"

[node name="DecreaseButton" type="Button" parent="CounterControl"]
margin_top = 80.0
margin_right = 125.0
margin_bottom = 120.0
hint_tooltip = "Idk what this does, sorry."
text = "Decrease Counter"

[node name="SpawnerControl" type="Control" parent="."]
margin_left = 893.0
margin_top = 8.0
margin_right = 933.0
margin_bottom = 48.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="SpawnToggleButton" type="Button" parent="SpawnerControl"]
self_modulate = Color( 1, 0, 0, 1 )
show_behind_parent = true
margin_right = 125.0
margin_bottom = 40.0
focus_mode = 0
text = "Toggle Spawning"

[connection signal="pressed" from="CounterControl/IncreaseButton" to="." method="_on_IncreaseButton_pressed"]
[connection signal="pressed" from="CounterControl/DecreaseButton" to="." method="_on_DecreaseButton_pressed"]
